# cpp_template_gears

./: CMakeLists.txt  README.md  binary.cpp  gcd.cpp  nbased.cpp  string_literal.cpp  type_index.hpp
gl/: attribute.cpp
include/cpp_template_gears/: binary.hpp  gcd.hpp  index_sequence.hpp  indexed_tuple.hpp  nbased.hpp  state.hpp  string_literal.hpp  thread_pool.hpp  type_list.hpp
include/cpp_template_gears/actor/: actor_ref.hpp  function.hpp  mailbox.hpp  message.hpp  scheduler.hpp  thread_local.hpp  thread_scheduler.hpp
include/cpp_template_gears/boost/: signal_group.cpp
include/cpp_template_gears/gl/: state.cpp
test/: CMakeLists.txt  actor_mailbox_message.cpp  binary_tree  binary_tree.cpp  binary_tree_creator.cpp  gcd.cpp  index_sequence.cpp  indexed_tuple.cpp  nbased.cpp  state.cpp  string_literal.cpp  thread_pool.cpp  type_index.cpp  type_list.cpp
test/actor/: thread_local.cpp
